--- a/marvel-softplan-reactjs/src/pages/Main/style.css
+++ b/marvel-softplan-reactjs/src/pages/Main/style.css
@@ -15,6 +15,14 @@
     display: flex;
     align-items: center;
 }
+.heroes-page {
+    display: flex;
+    height: 500px;
+    /* background-color: black; */
+
+    justify-content: center;
+    align-items: center;
+}
 /*
 #search-input {
     width: 450px;
@@ -75,10 +83,11 @@ form#search button {
     padding: 5px 15px;
     color: #fff;
 }
+/*
 .saved-list-btn:hover {
     background-color: rgb(8, 131, 14);
 }
-
+*/
 .list-favorites {
     display: contents;
 }
