Adding pagination to project ...

--- a/marvel-softplan-reactjs/src/pages/Main/style.css
+++ b/marvel-softplan-reactjs/src/pages/Main/style.css
@@ -82,6 +82,8 @@ form#search button {
     border-radius: 4px;
     padding: 5px 15px;
     color: #fff;
+    min-width: 240px;
+    max-width: 280px;
 }
 /*
 .saved-list-btn:hover {
