--- a/marvel-softplan-reactjs/src/components/heroeditor/style.css
+++ b/marvel-softplan-reactjs/src/components/heroeditor/style.css
@@ -74,3 +74,31 @@
 .close-editor-window-btn {
     background-color: #ca0f0f;
 }
+
+.add-new-serie,
+.serie-container {
+    display: flex;
+    justify-content: center;
+    font-style: italic;
+    font-size: 12px;
+}
+
+.editor-series-container {
+    height: 120px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.new-serie-input,
+.serie-container-input {
+    width: 80%;
+    font-size: 12px;
+    font-style: italic;
+    text-align: center;
+}
+
+.new-serie-input {
+    margin-right: 39px;
+    height: 30px;
+    margin-bottom: 40px;
+}
